--- a/src/app/gifs/components/side-menu/side-menu.component.html
+++ b/src/app/gifs/components/side-menu/side-menu.component.html
@@ -1,4 +1,7 @@
 <div id="menu" class="w-[220px] bg-gray-900 min-h-screen z-10 text-slate-300 fixed left-0 h-screen">
   <gifs-side-menu-headaer />
   <gifs-side-menu-options />
+  <gifs-side-menu-history
+    [history]="gifService.searchHistoryKeys()"
+  />
 </div>
