--- a/src/app/gifs/pages/trending-page/trending-page.component.html
+++ b/src/app/gifs/pages/trending-page/trending-page.component.html
@@ -1,6 +1,8 @@
-<gifs-list
-  [gifs]="gifService.trendingGifs()"
-/>
+<section class="py5">
+  <gifs-list
+    [gifs]="gifService.trendingGifs()"
+  />
+</section>
 
 <!-- <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
   <div class="grid gap-4">
